# Tetris-Qt

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cpp  mainwindow.cpp  mainwindow.h
.cache/clangd/index/: main.cpp.00C85A1AAC52C579.idx  main.cpp.9A25E227FF16DA06.idx  main.cpp.FA1F52672472E14B.idx  mainwindow.cpp.2C55B33A0B1E7C80.idx  mainwindow.cpp.FC627867259F48BE.idx  mainwindow.h.4FF48FB4B9887970.idx  mainwindow.h.FC778F432C111C39.idx
docs/: TODO.txt
src/: gamewindow.cpp  gamewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  tetromino.cpp
